<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gendigital.tareacontacto.ConfirmaActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_titulo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:textColor="@color/textColorPrimary"
        android:padding="5dp"
        android:textSize="30dp"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/llConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvTitName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_name"
            android:layout_marginTop="20dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:textSize="18dp"
            android:background="@color/design_fab_shadow_mid_color" />

        <TextView
            android:id="@+id/tvTitBirthday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"
            android:layout_marginTop="20dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvBirthday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:textSize="18dp"
            android:background="@color/design_fab_shadow_mid_color" />

        <TextView
            android:id="@+id/tvTitPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_phone"
            android:layout_marginTop="20dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:textSize="18dp"
            android:background="@color/design_fab_shadow_mid_color" />

        <TextView
            android:id="@+id/tvTitEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_email"
            android:layout_marginTop="20dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:textSize="18dp"
            android:background="@color/design_fab_shadow_mid_color" />

        <TextView
            android:id="@+id/tvTitDescrip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_descrip"
            android:layout_marginTop="20dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvDescrip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:textSize="18dp"
            android:background="@color/design_fab_shadow_mid_color" />

        <Button
            android:id="@+id/btn_edit"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_edit"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimary" />

    </LinearLayout>
</LinearLayout>
